deploy/openshift/dev/01-mongodb.yml
apiVersion: v1
kind: Service
metadata:
  name: customer-mongodb
  labels:
    app.kubernetes.io/name: customer-mongodb
    app.kubernetes.io/part-of: customer
    app.kubernetes.io/instance: customer-dev
    environment: dev
spec:
  selector:
    app.kubernetes.io/name: customer-mongodb
  ports:
    - name: mongodb
      port: 27017
      targetPort: mongodb
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: customer-mongodb
  labels:
    app.kubernetes.io/name: customer-mongodb
    app.kubernetes.io/part-of: customer
    app.kubernetes.io/instance: customer-dev
    environment: dev
spec:
  serviceName: customer-mongodb
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: customer-mongodb
  template:
    metadata:
      labels:
        app.kubernetes.io/name: customer-mongodb
        app.kubernetes.io/part-of: customer
        app.kubernetes.io/instance: customer-dev
        environment: dev
    spec:
      containers:
        - name: mongodb
          image: docker.io/library/mongo:7.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: mongodb
              containerPort: 27017
          volumeMounts:
            - name: customer-mongodb-data
              mountPath: /data/db
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
  volumeClaimTemplates:
    - metadata:
        name: customer-mongodb-data
        labels:
          app.kubernetes.io/name: customer-mongodb
          app.kubernetes.io/part-of: customer
          app.kubernetes.io/instance: customer-dev
          environment: dev
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: gp3
        resources:
          requests:
            storage: 1Gi
